made login/signup links disappear when logged in, fixed other things along those lines that should only be visible to logged in users. trying to add a favicon too

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,7 +70,7 @@ h6 {
 
 .carousel-fixed-item h1 {
 	font-family: 'EB Garamond', serif;
-	text-shadow: 3px 3px #323232;
+	text-shadow: 3px 3px 4px #323232;
 	color: white;
 }
 
